Organizing and adding comments to the commands